# ToxBind

./: .dockerignore  .gitattributes  .gitignore  1yi5.fasta  1yi5_multi.fasta  5nq4.fasta  README.md  TODO.md  environment.yml  fetch_data_from_s3.ipynb  final_results.csv  modal_bindcraft.py  modal_run_command.md  pdb_tools_command.md  pyproject.toml
analysis/: 1yi5_l146_s61041_mpnn1.fasta  1yi5_l146_s61041_mpnn2.fasta  1yi5_l153_s230218_mpnn1.fasta  1yi5_l153_s230218_mpnn2.fasta  1yi5_l153_s269018_mpnn8.fasta  1yi5_l159_s712800_mpnn15.fasta  1yi5_l159_s712800_mpnn6.fasta  1yi5_l83_s980977_mpnn1.fasta  1yi5_l83_s980977_mpnn2.fasta  1yi5_l84_s615725_mpnn14.fasta  1yi5_l85_s194532_mpnn20.fasta  1yi5_l85_s357894_mpnn2.fasta  1yi5_l88_s585564_mpnn5.fasta  1yi5_l88_s642851_mpnn6.fasta  1yi5_l89_s121962_mpnn16.fasta  1yi5_l89_s204901_mpnn4.fasta  1yi5_l94_s739327_mpnn16.fasta  1yi5_l96_s23541_mpnn13.fasta  1yi5_l96_s23541_mpnn2.fasta  1yi5_l96_s315414_mpnn5.fasta  1yi5_l96_s315414_mpnn6.fasta  1yi5_l96_s566473_mpnn1.fasta  1yi5_l96_s566473_mpnn4.fasta  1yi5_l96_s812252_mpnn14.fasta  1yi5_l96_s868292_mpnn1.fasta  1yi5_l96_s868292_mpnn2.fasta  3NIT.faa  5nq4_l120_s575933_mpnn1.fasta  5nq4_l120_s575933_mpnn12.fasta  5nq4_l120_s808237_mpnn5.fasta  5nq4_l120_s808237_mpnn8.fasta  5nq4_l84_s3585_mpnn4.fasta  5nq4_l86_s533102_mpnn6.fasta  5nq4_l86_s533102_mpnn8.fasta  5nq4_l88_s194736_mpnn5.fasta  5nq4_l88_s194736_mpnn6.fasta  6aru_final_chain_A_domain_3_l150_s546843_mpnn6.fasta  7z14_l74_s134466_mpnn6.fasta  7z14_l79_s855285_mpnn2.fasta  7z14_l79_s855285_mpnn3.fasta  (+23 more)
(+293 files in other folders)
